// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleThumbnail /> should render correctly with Readmore 1`] = `
<ArticleThumbnail
  anchorProps={
    Object {
      "className": "AnchorClass",
      "target": "_blank",
      "to": "#",
    }
  }
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={
    Object {
      "alt": "Dummy Image",
      "loading": "lazy",
      "placeholderSrc": "https://placekitten.com/g/601/300",
      "sizes": "(min-width: 36em) 33.3vw, 100vw",
      "src": "https://placekitten.com/g/601/300",
      "srcset": "https://placekitten.com/g/601/300 1024w, https://placekitten.com/g/401/300 640w, https://placekitten.com/g/301/300 320w",
    }
  }
  readMoreContent="ReadMore"
>
  Test
</ArticleThumbnail>
`;

exports[`<ArticleThumbnail /> should render correctly with full clickable thumb 1`] = `
<ArticleThumbnail
  anchorProps={
    Object {
      "className": "AnchorClass",
      "target": "_blank",
      "to": "#",
    }
  }
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={
    Object {
      "alt": "Dummy Image",
      "placeholderSrc": "https://placekitten.com/g/600/300",
      "sizes": "(min-width: 36em) 33.3vw, 100vw",
      "src": "https://placekitten.com/g/600/300",
      "srcset": "https://placekitten.com/g/600/300 1024w, https://placekitten.com/g/400/300 640w, https://placekitten.com/g/300/300 320w",
    }
  }
>
  Test
</ArticleThumbnail>
`;
